--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -35,7 +35,7 @@
             <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
             <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
-            <p class="datepara">October-08-2025 | Octuber-13-2025</p>
+            <p class="datepara">November-03-2025 | November-08-2025</p>
             <p class="locationpara">Buenos Aires | Argentina</p>
         </div>
         <div class="containerMain">
@@ -45,7 +45,7 @@
                 <br>
                 <p>
                     Dear archers and fans of archery,
-                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from October-08-2025 to October-13-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Polideportivo Municipal Colinas de Peralta Ramos</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
+                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from November-03-2025 to November-08-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Santa Clara del Mar Sportcenter</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
                 <p class="pMsg"><strong>Gustavo Stancato</strong></p>
                 <p>Chairman of the Organising Committee for the WIAC 2025 World Archery Championships</p></div>
         </div>
@@ -84,7 +84,7 @@
             </div>
             <div class="schlR">
                 <div class="dropdown">
-                    <button class="daySchl">Wednesday 10-08-2025</button>
+                    <button class="daySchl">Monday 11-03-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 13hs - Registration and equipment inspection </li>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="daySchl">Thursday 10-09-2025</button>
+                    <button class="daySchl">Tuesday 11-04-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 16hs - Registration and equipment inspection</li>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="daySchl">Friday 10-10-2025</button>
+                    <button class="daySchl">Wednesday 11-05-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 13hs - Practice Range Open </li>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="daySchl">Saturday 10-11-2025</button>
+                    <button class="daySchl">Thursday 11-06-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 13hs - Practice Range Open </li>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="daySchl">Sunday 10-12-2025</button>
+                    <button class="daySchl">Friday 11-07-2025</button>
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 16hs - Registration and equipment inspection</li>
@@ -143,7 +143,7 @@
                     </div>
                     </div>
                     <div class="dropdown">
-                        <button class="daySchl">Monday 10-13-2025</button>
+                        <button class="daySchl">Saturday 11-08-2025</button>
                         <div class="dropdown-content">
                             <ul>
                                 <li>11hs - 15hs - Award Ceremony
@@ -158,13 +158,13 @@
         <div class="bookingContainer">
             <div class="bookingText">
                 <h2 class="subtitle">Book your space</h2>
-                <span><p>The tournament stars on Wednesday 08th of October-2025 until Monday 13th of October 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
-                <span><p>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos,Mar Del Plata, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
+                <span><p>The tournament stars on Monday 3rd of November 2025 until Saturday 8th of November 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
+                <span><p>The tournament takes place at Santa Clara del Mar Sport center, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
                 <div class="card secondGroup">
                 <h3>SecondCall</h3>
-                <p class="cardUp">From January 1st 2025 to February 28th 2025</p>
+                <p class="cardUp">From February 1st 2025 to March 31st 2025</p>
                 <p class="precio Up">€170</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€130</p>
@@ -174,7 +174,7 @@
             <div class="card earlyBird">
                 <span class="spanCard"></span>
                 <h3>Early Bird</h3>
-                <p class="cardUp">From November 1st 2024 to Diciembre 31th 2024</p>
+                <p class="cardUp">From December 1st 2024 to January 31st 2025</p>
                 <p class="precio Up">€150</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€120</p>
@@ -184,7 +184,7 @@
             
             <div class="card lastCall">
                 <h3>Last call</h3>
-                <p class="cardUp">From Marzo 1st 2025 to July 10th 2025</p>
+                <p class="cardUp">From April 1st 2025 to August 10th 2025</p>
                 <p class="precio Up">€190</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€140</p>
