--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -41,12 +41,18 @@
                 <ul>
                     <li>Each inscription is only for one participant.
                     </li>
-                    <li>After filling the form, you will get 14 days from the reservation to pay the inscription.
+                    <li>After filling the form, you will get 14 days from the reservation to pay the registration fee and send the receipt to wiac2025@gmail.com
                     </li>
-                    <li>After 14 days of the reservation, if you have not made the payment, your reservation will be CANCELED </li>
+                    <li>After 14 days of the inscription, if you have not made the payment, your reservation will be <strong>CANCELED</strong> </li>
+                    <li>The payment instructions will be shown once you have completed the registration</li>
                     <li>After paying, you will get registered and you will get a spot in the WIAC 2025.</li>
                     <li>Note: Amounts will be charged in local currency (ARS).</li>
+                    <li>PLEASE NOTE The transfer commission fees are as follows:<br>
+                        $15 USD for transfers up to $500 USD.<br>
+                        $25 USD for transfers from $501 USD to $1,000 USD.<br>
+                        You can include two or more registrations in a single transfer.</li>
                     <li>(*) items in the form need to be complete.</li>
+                    
                     <li>Please read the <a class="aForm" href="/tyc">Terms of acceptance </a>before registration.</li>
                 </ul>
             </div>
@@ -210,7 +216,7 @@
 
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
-                onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+                onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
         <script src="/resources/js/InscValidator.js">
@@ -226,7 +232,7 @@
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter"
-                href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact
+                href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact
                 us</a>
 
         </div>
