--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -37,7 +37,7 @@
         </div>
         <div class="needHelpContainer">
             <button class="needHelpBtn btnHelp"
-                onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+                onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
     </main>
@@ -48,7 +48,7 @@
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
-            <a class="aFooter" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
             
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
