--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -140,7 +140,7 @@
 
             <div class="needHelpContainer">
                 <button class="needHelpBtn btnHelp"
-                    onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+                    onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
                 </button>
             </div>
     </main>
@@ -152,7 +152,7 @@
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter"
-                href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact
+                href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact
                 us</a>
 
         </div>
