--- a/views/home/pagenrep.html
+++ b/views/home/pagenrep.html
@@ -39,7 +39,7 @@
 
             <p class="subparrafoHome">Para más información, comunicate a 
                 <br class="brbtn">
-                <a class="btnMail" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+                <a class="btnMail" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">wiac2025@gmail.com</a>
         </div>
     </main>
     <footer class="footer">
