--- a/views/home/registersucess.ejs
+++ b/views/home/registersucess.ejs
@@ -19,7 +19,7 @@
         <img src="/resources/img/successIcon.png" alt="Success">
         <h1>Congratulations!</h1>
         <p>You have registered for the WIAC 2025 tournament.</p>
-        <p><strong>Remember have 14 days to make the payment.</strong></p>
+        <p><strong>Remember you have 14 days to make the payment.</strong></p>
         <a href="/" class="btn  btn-secondary">GO HOME</a> 
         </div>
         </div>
