--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -38,7 +38,7 @@
         <div class="ubicacionParraf"><p class="ubicacionDetail">For more information about <strong>Santa Clara del Mar Sport center</strong><a href="https://santaclaradelmar.com/anuncio/polideportivo-de-santa-clara-del-mar/" target="_blank">Click here</a></p></div>
     <div class="needHelpContainer">
         <button class="needHelpBtn btnHelp"
-        onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+        onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
         </button>
     </div>
 </main>
@@ -49,7 +49,7 @@
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
-            <a class="aFooter" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
             
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
