--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@
 .footer{
     background: linear-gradient(180deg, rgba(63,66,66,1) 19%, rgba(32,30,30,1) 72%);
     width: 100%;
-    height: 27vh;
+    height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -190,28 +190,32 @@ main{
 /* Home Banner */
 .bannerHome{
     display: flex;
-    width: 100%;
-    height: auto;
+    width: 90vw;
+    height: max-content;
+    margin: auto;
+    
 }
 
 .bannerHome img{
-    width: 100vw;
-    height: auto;
+    width: 96vw;
+    height: 70vh;
     position: relative;
+    left: -3rem;
     object-fit: cover;
+    margin: auto;
 }
 .bannerHome h1{
     position: absolute;
     color: #FFFFFF;
     font-size: 5rem;
-    top:9rem;
+    top:9.5rem;
     text-shadow: 1px 1px 3px black;
 }
 .hometoptext{
     position: absolute;
     color: #FFFFFF;
     font-size: 4rem;
-    top:4rem;
+    top:4.5rem;
     left: 29rem;
     text-shadow: 1px 1px 3px black;
 }
@@ -220,7 +224,7 @@ main{
     color: #FFFFFF;
     font-size: 2rem;
     top: 23rem;
-    left:30rem;
+    left:25rem;
     text-shadow: 1px 1px 3px black;
 }
 .locationpara{
@@ -228,8 +232,8 @@ main{
     position: absolute;
     color: #FFFFFF;
     font-size: 2rem;
-    top: 25rem;
-    left:38rem;
+    top:39rem;
+    left:33rem;
     text-shadow: 1px 1px 3px black;
 }
 
@@ -267,7 +271,7 @@ main{
 }
 /* Home Schedule */
 .homeSchedule{
-    width: 100%;
+    width: 90%;
     height: 35rem;
     display: flex;
     flex-direction: row;
@@ -380,10 +384,10 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height:80%;
+    height:max-content;
     width: 100%;
     border:1px solid #c1c1c3;
-    margin: 0px 1rem;
+    /* margin: 0px .5rem; */
     border-radius: 1rem;
     position: relative;
     overflow: hidden;
