--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -26,7 +26,7 @@
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li> 
                         <li><a class="linkNav" href="/turism">TURISM</a></li>  
-                        <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>        
+                        <li><a class="linkNav" href="/tyc">T&C</a></li>        
                     </ul>
         </nav>
     </header>
@@ -34,9 +34,9 @@
         <div class="bannerHome">
             <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
-            <h1 class="title titleMain">WIAC Word Indoor Archery Championship 2025</h1>
-            <p class="datepara">November-03-2025 | November-08-2025</p>
-            <p class="locationpara">Buenos Aires | Argentina</p>
+                <h2>Word Indoor</h2> 
+                <h3>Archery Championship 2025</h3>
+            <p class="datepara">Nov-03-2025 | Buenos Aires, Argentina </p>
         </div>
         <div class="containerMain">
             <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
@@ -158,7 +158,7 @@
         <div class="bookingContainer">
             <div class="bookingText">
                 <h2 class="subtitle">Book your space</h2>
-                <span><p>The tournament stars on Monday 3rd of November 2025 until Saturday 8th of November 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
+                <span><p>The tournament starts on Monday 3rd of November 2025 until Saturday 8th of November 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
                 <span><p>The tournament takes place at Santa Clara del Mar Sport center, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
             <div class="booking">
