--- a/views/home/tyc.ejs
+++ b/views/home/tyc.ejs
@@ -28,7 +28,7 @@
                 <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                 <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
                 <li><a class="linkNav" href="/turism">TURISM</a></li> 
-                <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>
+                <li><a class="linkNav" href="/tyc">T&C</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
                 </li>
                 <li>
                     <h4>Registry fees and dates</h4>
-                    Registration shall be open on November-1st-2024.<br>
+                    Registration shall be open on December-1st-2024.<br>
                     Registration fees for individuals early bird shall be:<br>
                     Professionals, Seniors, Veterans, Adult and Young Adult: 150€
                     Juniors and Cubs: 120€<br>
@@ -59,17 +59,17 @@
                     Fees for the Champion of Nations shall be 100€ each team.<br>
                     Registration and payment at WIAC Registration Desk<br>
                     The list containing confirmed archers will be updated every SUNDAY<br>
-                    Registration shall close on July-10th-2025 or earlier, if the number of registered archers reach 288.<br>
-                    The final date to change style is July-30th-2025.
+                    Registration shall close on August-10th-2025 or earlier, if the number of registered archers reach 288.<br>
+                    The final date to change style is August-30th-2025.
                 </li>
                 <li>
                     <h4>Cancellation Policy</h4>
                     Reimbursement of registration fees in the case of a written cancellation.<br>
                     Send a request by email to aata.argentina.presidente@gmail.com. with subject REFUND WIAC 2025.<br>
-                    * Before January-01st-2025: 90% of entry fee<br>
-                    * Before March-01st-2025: 50% of entry fee<br>
-                    * Before July-30th-2025: 20% of entre fee<br>
-                    * No refund after August-1st-2025<br>
+                    * Before February-01st-2025: 90% of entry fee<br>
+                    * Before April-01st-2025: 50% of entry fee<br>
+                    * Before August-31th-2025: 20% of entre fee<br>
+                    * No refund after September-1st-2025<br>
                     The above refund policy is only for registration fees and excludes accommodation.<br>
                     The WIAC 2025 Organizing Committee is NOT responsible for any type of reservations related to
                     accommodation.Please contact travel agency or hotel directly regarding the refund policy for
@@ -80,7 +80,7 @@
                     <h4>Banquet and Award Ceremony</h4>
                     The award banquet will be hosted at the main tent area.<br> Tickets for the Banquet will be sold at
                     the registration desk with a price 30€.<br>
-                    Award ceremony to be held in the same venue on Monday 13th.
+                    Award ceremony to be held in the same venue on Saturday 8th of November.
                 </li>
                 <li>
                     <h4>Transportation</h4>
