--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -25,7 +25,7 @@
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
                         <li><a class="linkNav" href="/turism">TURISM</a></li>    
-                        <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>       
+                        <li><a class="linkNav" href="/tyc">T&C</a></li>       
                     </ul>
         </nav>
     </header>
@@ -35,7 +35,9 @@
         <div class="ubicacionContainer">
             <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.501227504663!2d-57.51051781554116!3d-37.83512316297116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584d103b8e8f7d3%3A0xff4556524ff54401!2sPolideportivo%20Santa%20Clara%20del%20Mar!5e1!3m2!1sen!2ses!4v1731847971004!5m2!1sen!2ses" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="ubicacionParraf"><p class="ubicacionDetail">For more information about <strong>Santa Clara del Mar Sport center</strong><a href="https://santaclaradelmar.com/anuncio/polideportivo-de-santa-clara-del-mar/" target="_blank">Click here</a></p></div>
+        <div class="ubicacionParraf"><p class="ubicacionDetail">For more information about <strong>Santa Clara del Mar Sport center</strong></p>
+            <a href="https://santaclaradelmar.com/anuncio/polideportivo-de-santa-clara-del-mar/" target="_blank">Click here</a>
+        </div>
     <div class="needHelpContainer">
         <button class="needHelpBtn btnHelp"
         onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
