--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -193,78 +193,78 @@ main{
     width: 90vw;
     height: max-content;
     margin: auto;
-    
+    height: 100%;
+    justify-content: center;
 }
 
 .bannerHome img{
-    width: 96vw;
-    height: 70vh;
-    position: relative;
-    left: -3rem;
+    width: 100vw;
+    height: 80vh;
     object-fit: cover;
     margin: auto;
+    
 }
-.bannerHome h1{
+.bannerHome h2{
     position: absolute;
     color: #FFFFFF;
     font-size: 5rem;
-    top:9.5rem;
+    top:5rem;
+    text-shadow: 1px 1px 3px black;
+}
+.bannerHome h3{
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 5rem;
+    top:11rem;
     text-shadow: 1px 1px 3px black;
 }
 .hometoptext{
     position: absolute;
     color: #FFFFFF;
-    font-size: 4rem;
-    top:4.5rem;
-    left: 29rem;
+    font-size: 2.5rem;
+    top:3rem;
     text-shadow: 1px 1px 3px black;
+    text-align: center;
 }
 .datepara{
     position: absolute;
     color: #FFFFFF;
-    font-size: 2rem;
-    top: 23rem;
-    left:25rem;
-    text-shadow: 1px 1px 3px black;
-}
-.locationpara{
-    position: absolute;
-    position: absolute;
-    color: #FFFFFF;
-    font-size: 2rem;
-    top:39rem;
-    left:33rem;
+    font-size: 1.2rem;
+    top: 17.5rem;
     text-shadow: 1px 1px 3px black;
 }
 
+
 /* Home Message */
 .containerMain{
-    width: 100%;
+    width: 90vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     height: max-content;
+
 }
 .message{
     width: 70%;
 }
 .containerMain img{
-    width: 40%;
+    width: 50%;
     height: auto;
     padding: 3rem;
 }
 .containerMain h4{
-    font-size: 3rem;
+    font-size: 2.1rem;
     margin-top: 1rem;
-    margin-left: 4rem;
     font-weight: 400;
+    text-align: center;
 }
 .containerMain p{
-    padding: 0 4rem;
+    padding: 0 2rem;
     font-size: 1.2rem;
     font-weight: 400;
     margin-bottom: 1rem;
+    margin-left: 1rem;
 }
 .pMsg{
     color: #008080;;
@@ -713,6 +713,26 @@ main{
     margin: auto;
     margin-bottom: 1rem;
 }
+.ubicacionParraf{
+    text-align: center;
+}
+.ubicacionParraf a{
+    display: block; 
+    background-color: #008080;
+    color: #000;
+    padding: .5rem .5rem;
+    text-decoration: none;
+    border-radius: 10px;;
+    margin: auto ;
+    width: max-content;
+    font-weight: 600;
+}
+
+.ubicacionParraf a:hover{
+    background-color: #c1c1c3;
+    color: #008080;
+    font-weight: 600;
+}
 
 /* pagina  participants */
 .containerParticipants{
@@ -743,7 +763,7 @@ main{
 .schedule{
     background-size: cover;
     width: 100%;
-    height: 100rem;
+    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -753,29 +773,29 @@ main{
     font-size: 1.2rem;
 }
 
-
 .schedule h4{
     font-size: 2rem;
     font-weight: 600;
     color: #008080;
     
-
 }
 .scheduleDays{
     width:67%;
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
     z-index: 1;
     height: 100%;
+    overflow: hidden;
 }
 .scheduleDays img{
-    width: 67%;
+    width: 83.7%;
     position: absolute;
-    top: -100;
-    z-index: -10;
+    left: 5rem;
+    z-index: -100;
     filter: blur(6px);
     filter: opacity(0.5);
+    object-fit: cover;
+    height: max-content;
     
 }
 .day{
