--- a/views/admin/form.ejs
+++ b/views/admin/form.ejs
@@ -36,6 +36,7 @@
             <th scope="col">Gender</th>
             <th scope="col">Bow type</th>
             <th scope="col">Target type</th>
+            <th scope="col">Flint type</th>
             <th scope="col">Message</th>
             <th scope="col" hidden>Date</th>
             <th scope="col">Pay</th>
@@ -56,6 +57,7 @@
                     <td><%= user.Gender %></td>
                     <td><%= user.Bowtype %></td>
                     <td><%= user.Target %></td>
+                    <td><%= user.Flint %></td>
                     <td class="TdText"><%= user.Text %></td>
                     <td hidden><%= user.dateReg %></td>
                     <td><%= user.Pay %></td>
