--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -28,7 +28,7 @@
                 <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                 <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
                 <li><a class="linkNav" href="/turism">TURISM</a></li> 
-                <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>
+                <li><a class="linkNav" href="/tyc">T&C</a></li>
             </ul>
         </nav>
     </header>
@@ -132,6 +132,7 @@
                     <div class="day"><span>
                         <h4>Saturday</h4>
                         <p>11hs-15hs</p>
+                        <p></p>
                     </span><span>
                         <h4>11-08-2025</h4>
                         <p>Award Ceremony & Banquet Closing Ceremony</p>
