--- a/views/home/regSumary.ejs
+++ b/views/home/regSumary.ejs
@@ -28,7 +28,7 @@
             <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
             <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
             <li><a class="linkNav" href="/turism">TURISM</a></li>
-            <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>
+            <li><a class="linkNav" href="/tyc">T&C</a></li>
         </ul>
     </nav>
 </header>
@@ -48,6 +48,7 @@
                     <li><h3>Gender: <%= query.Gender %></h3></li>
                     <li><h3>Bow Type: <%= query.Bowtype %></h3></li>
                     <li><h3>Target type: <%= query.Target %></h3></li>
+                    <li><h3>Flint Target type: <%= query.Flint %></h3></li>
                     <li><h3>Message: <%= query.Mssg %></h3></li>
                     <hr>
                     <div>
@@ -88,6 +89,7 @@
                     <input type="hidden" name="Gender" value="<%= query.Gender %>">
                     <input type="hidden" name="Bowtype" value="<%= query.Bowtype %>">
                     <input type="hidden" name="Target" value="<%= query.Target %>">
+                    <input type="hidden" name="Flint" value="<%= query.Flint %>">
                     <input type="hidden" name="Mssg" value="<%= query.Mssg %>">
                     <button type="submit" class="btnInsc btnReg">Confirm</button>
                     <a class="btnInsc btnCnl" href="/">Cancel</a> 
