--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -15,7 +15,7 @@
     <div class="containerIndexAdmin"><h1 class="title">Pagina de inicio</h1>
         <% if (login) { %>
         <h2 class="subtitle">El usuario conectado es : <strong><%= name %></strong></h1>
-        <a class="btn btn-danger btn-lg" href="logout" class="a-logout">Logout</a>
+        <a class="btn btn-danger btn-lg" href="/logout" class="a-logout">Logout</a>
         <% } else { %>
         <h2 class="subtitle"><strong><%= name %></strong></h1>
             <a class="btn btn-success btn-lg" href="/login" class="a-login">LOGIN</a></div>
