--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -818,6 +818,86 @@ main{
 .day span p{
     height: 1.8rem;
 }
+/* pagina Turism */
+.turisMain{
+    height: max-content
+}
+.turisContainer{
+    width: 90%;
+    height: 100%;
+    margin: auto;
+}
+.turismHotel{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+.hotelLeft{
+    width: 20rem;
+    height: 30rem;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.hotelLeft span{
+    background-color: #008080;
+    color: white;
+}
+
+.hotelLeft a{
+    margin-top: .5rem;
+    text-decoration: none;
+    background-color: #008080;
+    color:white;
+}
+.hotelLeft a:hover{
+    background-color: white;
+    color:#008080;
+}
+
+.hotelLeft h3{
+    font-size: 2rem;
+    background-color: #008080;
+    color: white;
+    margin-bottom: 1rem;
+}
+.hotelLeft h4{
+    font-size: 1rem;
+}
+.table{
+    border:1px solid black;
+    margin: auto;
+}
+
+.table th, td {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+}
+.table th {
+    background-color: #f4f4f4;
+}
+.hotelRight{
+    width: 70%;
+    height: 100%;
+    margin: auto;
+}
+.turismHotel img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin: auto;
+}
+.turismNeed{
+    position: relative;
+    top:2rem
+}
+
 
 /* pagina T&C */
 .tycContainer{
@@ -872,6 +952,48 @@ main{
     border: 1px solid #009900;
     color: #009900;
 }
+/* Pagina regSumary */
+.sumaryContainer{
+    display: flex;
+    flex-direction: row;
+    margin-top: 1rem;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 2rem auto;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    background: linear-gradient(180deg, rgb(110, 130, 130) 20%, rgb(45, 53, 53) 60%);
+    color: #c1c1c3;
+}
+.sumaryContainer li{
+    list-style: none;
+}
+.subSumaryContainer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-top: .5rem;
+    margin-bottom: 0;
+}
+.subSumaryContainer h2{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+.subSumaryContainer span{
+    text-decoration: underline;
+}
+
+.inscDetails, .paymentInstruction{
+    width: 50%;
+    padding: 0 .5rem;
+}
+.insNotes{
+    padding: 0 2rem;
+}
+
+
 
 
 /* responsive */
