--- a/views/home/registersucess.ejs
+++ b/views/home/registersucess.ejs
@@ -20,6 +20,7 @@
         <h1>Congratulations!</h1>
         <p>You have registered for the WIAC 2025 tournament.</p>
         <p><strong>Remember you have 14 days to make the payment.</strong></p>
+        <p><strong>Please check your email inbox for more information</strong></p>
         <a href="/" class="btn  btn-secondary">GO HOME</a> 
         </div>
         </div>
