--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/loader.css">
     <link rel="stylesheet" href="/resources/css/styles.css">
+    <link rel="stylesheet" href="/resources/css/slider.css">
     <link rel="shortcut icon" href="/resources/img/LogoWIAC2025.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,33 +14,136 @@
     <script src="resources/js/loader.js"></script>
     <title>turism | WIAC 2025</title>
 </head>
+
 <body>
     <header class="header">
-        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a></div>
+        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a>
+        </div>
         <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">&#9776;</label> 
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav class="navbar">
-                    <ul class="lista">
-                        <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
-                        <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
-                        <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
-                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
-                        <li><a class="linkNav" href="/turism">TURISM</a></li>    
-                        <li><a class="linkNav" href="/tyc">T&C</a></li> 
-                              
-                    </ul>
+            <ul class="lista">
+                <li><a class="linkNav" href="/">HOME</a></li>
+                <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
+                <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
+                <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
+                <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                <li><a class="linkNav" href="/turism">TURISM</a></li>
+                <li><a class="linkNav" href="/tyc">T&C</a></li>
+
+            </ul>
         </nav>
     </header>
-    <main class="ubicacionMain">
-        <h1 class="title">Turism</h1>
-        <p>This page is Under Construction</p>
-    <div class="needHelpContainer">
-        <button class="needHelpBtn btnHelp"
-        onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
-        </button>
-    </div>
-</main>
+    <main class="turisMain">
+        <div class="turisContainer">
+            <h1 class="title">Turism</h1>
+            <div class="turismHotel">
+                <div class="hotelLeft">
+                    <h3>HOTEL KONKE</h3>
+                    <p>Mar del Plata</p>
+                    <a href="https://hotelkonkemardelplata.com/">www.hotelkonkemardelplata.com</a>
+                    
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Room</th>
+                                <th>City View</th>
+                                <th>Sea View</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Single</td>
+                                <td>Us$185</td>
+                                <td>Us$240</td>
+                            </tr>
+                            <tr>
+                                <td>Double</td>
+                                <td>Us$195</td>
+                                <td>Us$250</td>
+                            </tr>
+                            <tr>
+                                <td>Triple</td>
+                                <td>Us$250</td>
+                                <td>Us$320</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <span>
+                        <h4>For reservations</h4>
+                    <p>Whatsapp +5491122693550</p>
+                    <p>reservas@hotelkonkemardelplata.com</p>
+                    </span>
+                </div>
+                <div class="hotelRight">
+                    <div class="slider">
+                        <div class="slides">
+                            <div class="slide"><img src="/resources/img/konke1.jpg" alt="Image 1"></div>
+                            <div class="slide"><img src="/resources/img/konke2.jpg" alt="Image 2"></div>
+                            <div class="slide"><img src="/resources/img/konke3.jpg" alt="Image 3"></div>
+                            <div class="slide"><img src="/resources/img/konke4.jpg" alt="Image 4"></div>
+                            <div class="slide"><img src="/resources/img/konke5.jpg" alt="Image 5"></div>
+                            <div class="slide"><img src="/resources/img/konke6.jpg" alt="Image 6"></div>
+                        </div>
+                        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                    </div>
+                </div>
+            </div>
+            <div class="turismHotel">
+                <div class="hotelLeft">
+                    <h3>HOTEL NOVI</h3>
+                    <p>Mar del Plata</p>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Room</th>
+                                <th>Price </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Single</td>
+                                <td>Us$60</td>
+                            </tr>
+                            <tr>
+                                <td>Double</td>
+                                <td>Us$76</td>
+                            </tr>
+                            <tr>
+                                <td>Triple</td>
+                                <td>us$110</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <span>
+                        <h4>For reservations</h4>
+                        <p>Whatsapp +5492235373923</p>
+                        <p>hotelnovi@gmail.com</p>
+                    </span>
+                </div>
+                <div class="hotelRight">
+                    <div class="slider">
+                        <div class="slides">
+                            <div class="slide"><img src="/resources/img/novi1.jpg" alt="Image 1"></div>
+                            <div class="slide"><img src="/resources/img/novi2.jpg" alt="Image 2"></div>
+                            <div class="slide"><img src="/resources/img/novi3.jpg" alt="Image 3"></div>
+                            <div class="slide"><img src="/resources/img/novi4.jpg" alt="Image 4"></div>
+                            <div class="slide"><img src="/resources/img/novi5.jpg" alt="Image 5"></div>
+                            <div class="slide"><img src="/resources/img/novi6.jpg" alt="Image 6"></div>
+                        </div>
+                        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                    </div>
+                </div>
+            </div>
+            <div class="needHelpContainer turismNeed">
+                <button class="needHelpBtn btnHelp"
+                    onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+                </button>
+            </div>
+        </div>    
+    </main>
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
@@ -46,11 +151,14 @@
             <img src="/resources/img/logoaata.png" alt="logoAATA">
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
-            <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
-            
+            <a class="aFooter"
+                href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
     <div class="loader"></div>
+    <script src="resources/js/slider.js"></script>
 </body>
+
 </html>
