--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -60,7 +60,7 @@
                 <div class="rowForm">
                     <div class="lineForm ">
                         <label for="Firstname">First name(*):</label>
-                        <input type="text" id="Firstname" name="Firstname" autofocus required>
+                        <input type="text" id="Firstname" name="Firstname"  required>
                         <span class="error-message" id="Firstname-error"></span>
                     </div>
                     <div class="lineForm">
